package pac;

public enum MoveResult {
    INVALID,
    VALID,
    GAME_COMPLETED
}
